correct code according to code review
